Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15928

CMake build step does not work with multiple targets

XMLWordPrintable

      CMake does not support multiple --target arguments being passed on the command line. Until [1], specifying --target multiple times silently ignored all targets but the last one.

      Still, since the change at [2], line 322 and following, Qt Creator will potentially invoke CMake with arguments --target. So far my comment in Gerrit was ignored, so I'm filing this bug in the hope of getting attention.

      [1] https://github.com/Kitware/CMake/pull/214
      [2] https://codereview.qt-project.org/#/c/145242/5/src/plugins/cmakeprojectmanager/cmakebuildstep.cpp

        For Gerrit Dashboard: QTCREATORBUG-15928
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            sschuberth Sebastian Schuberth
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes