src/plugins/cmakeprojectmanager/cmakebuildconfiguration.cpp
@@ -409,14 +409,14 @@ ProjectExplorer::BuildConfiguration *CMakeBuildConfigurationFactory::create(Proj
 
     auto cleanStep = new CMakeBuildStep(cleanSteps);
     cleanSteps->insertStep(0, cleanStep);
-    cleanStep->setBuildTarget(CMakeBuildStep::cleanTarget(), true);
+    cleanStep->setBuildTarget(CMakeBuildStep::cleanTarget());
 
     bc->setBuildDirectory(copy.buildDirectory);
     bc->setCMakeConfiguration(copy.configuration);
 
     // Default to all
-    if (project->hasBuildTarget(QLatin1String("all")))
-        buildStep->setBuildTarget(QLatin1String("all"), true);
+    if (project->hasBuildTarget(CMakeBuildStep::allTarget()))
+        buildStep->setBuildTarget(CMakeBuildStep::allTarget());
 
     return bc;
 }
